portfolio item layout

--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -10,7 +10,7 @@
       <label for="pi--details--trigger--score" class="pi--details--trigger-label--close">X</label>
       <div class="pi--item-description">
         <h3 class="pi--item-label--client">Client:</h3>
-        <div class="pi--client">SCORE</div>
+        <div class="pi--client"><abbr>SCORE</abbr></div>
       </div>
       <div class="pi--item-description">
         <h3 class="pi--item-label--about">About:</h3>
