better details button

--- a/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
+++ b/src/patterns/01-molecules/02-blocks/00-portfolio-item.mustache
@@ -1,23 +1,24 @@
 <div class="portfolio-item_pi">
-  <h2 class="pi--project-name"><a href="">Score.org</a></h2>
+  <h2 class="pi--project-name">Score.org</h2>
   <div class="pi--overview">
     <div class="pi--overview--text">Engage and create <em>relationships</em> with <em>entrpreneurs</em>.</div>
   </div>
   <div class="pi--details">
     <input type="checkbox" class="pi--details--trigger hidden" id="pi--details--trigger--score">
-    <label for="pi--details--trigger--score" class="pi--details--trigger-label">Details</label>
+    <label for="pi--details--trigger--score" class="pi--details--trigger-label">What I did</label>
     <div class="pi--details--offside">
       <label for="pi--details--trigger--score" class="pi--details--trigger-label--close">X</label>
+      <h3 class="pi--details--title">What I did</h3>
       <div class="pi--item-description">
-        <h3 class="pi--item-label--client">Client:</h3>
+        <h4 class="pi--item-label--client">Client:</h4>
         <div class="pi--client"><abbr>SCORE</abbr></div>
       </div>
       <div class="pi--item-description">
-        <h3 class="pi--item-label--about">About:</h3>
+        <h4 class="pi--item-label--about">About:</h4>
         <div class="pi--about">{{excerpt.medium}}</div>
       </div>
       <div class="pi--item-description">
-        <h3 class="pi--item-label--responsibilities">Responsibilities:</h3>
+        <h4 class="pi--item-label--responsibilities">Responsibilities:</h4>
         <ul class="pi--responsibilities">
           <li>Art Direction</li>
           <li>Lead Designer</li>
@@ -28,7 +29,7 @@
         </ul>
       </div>
       <div class="pi--item-description">
-        <h3 class="pi--item-label--agency">Agency:</h3>
+        <h4 class="pi--item-label--agency">Agency:</h4>
         <div class="pi--agency"><a href="">Phase2</a></div>
       </div>
     </div>
