--- a/src/scss/00-config/03-mixins/_typography.scss
+++ b/src/scss/00-config/03-mixins/_typography.scss
@@ -14,6 +14,7 @@
 @mixin fontsize-rem($px, $root-px: $root-typesize) {
   font-size: $px;
   font-size: #{$px / $root-px}rem;
+  @warn "Deprecated. Use 'fontsize-rem' function";
 }
 // scss-lint:enable DuplicateProperty
 
