--- a/src/scss/10-base/_headings.scss
+++ b/src/scss/10-base/_headings.scss
@@ -31,7 +31,7 @@ $font-headline: sans !default;
 //  $line-height
 //
 @mixin heading-size($size, $line-height: false) {
-  @include fontsize-rem($size);
+  font-size: fontsize-rem($size);
   @if $line-height {
     line-height: $line-height;
   }
