--- a/src/scss/40-components/_portfolio-item.scss
+++ b/src/scss/40-components/_portfolio-item.scss
@@ -21,7 +21,6 @@ $flag-color: color(black);
   }
 }
 .pi--project-name {
-  // @todo look into type size inconsistancies and overrides
   @include h1();
   font-weight: 800;
   font-style: italic;
@@ -49,9 +48,7 @@ $flag-color: color(black);
   }
 }
 .pi--overview--text {
-  // @todo look into type size inconsistancies and overrides
   font-size: fontsize-rem(ms(1));
-  font-size: 1.27778em;
   line-height: 1.4;
   font-weight: 800;
   background-image: linear-gradient(-45deg, transparent 0.5rem, $flag-color 0);
@@ -60,9 +57,16 @@ $flag-color: color(black);
   position: relative;
   max-width: 20em;
   margin-bottom: 1.5em;
-  //transform: perspective(600px) rotateX(-12deg) rotateY(20deg) rotateZ(5deg);
-  //transform-origin: center;
-  //transform-style: preserve-3d;
+  @include breakpoint($bp-typography-narrow) {
+    font-size: fontsize-rem(ms(2));
+  }
+  @include breakpoint($bp--portfolio--show-details) {
+    flex-basis: 100vw;
+    margin-bottom: 3em;
+    transform: perspective(600px) rotateX(-12deg) rotateY(20deg) rotateZ(5deg) translateY(10px);
+    transform-origin: center;
+    transform-style: preserve-3d;
+  }
   &:before {
     position: absolute;
     content: '';
@@ -71,10 +75,6 @@ $flag-color: color(black);
     bottom: 100%;
     width: 1em;
     height: 1em;
-  }
-  @include breakpoint($bp--portfolio--show-details) {
-    flex-basis: 100vw;
-    margin-bottom: 3em;
   }
   em {
     font-family: font(surveyor);
@@ -192,7 +192,6 @@ $flag-color: color(black);
   display: block;
   margin-bottom: 1em;
   border-bottom: 0.125em solid $flag-color;
-  // @todo look into header inconsistancies and overrides
   text-transform: none;
   font-weight: 800;
 }
