another circle logo, based on the Clean Room

--- a/src/scss/40-components/_monogram.scss
+++ b/src/scss/40-components/_monogram.scss
@@ -1,7 +1,7 @@
 .monogram {
   font-size: fontsize-rem(ms(6));
-  background-color: color(black, light);
-  color: color(white, warm);
+  background-color: color(black);
+  color: color(white);
   font-family: font(surveyor-fine);
   line-height: 1;
   display: flex;
