--- a/src/patternlab-files/styleguide.mustache
+++ b/src/patternlab-files/styleguide.mustache
@@ -73,6 +73,7 @@
     <script src="../../../../bower_components/highlightjs/highlight.pack.js"></script>
     <script src="../../../../bower_components/lodash/lodash.js"></script>
     <script src="../../../../bower_components/drupal/index.js"></script>
+    <script src="../../../../bower_components/letteringjs/jquery.lettering.js"></script>
     <script src="../../../../bower_components/modernizr/modernizr.js"></script>
     <script src="../../../../dest/script.js"></script>
     <!-- endinject -->
