--- a/src/scss/40-components/_button-logo.scss
+++ b/src/scss/40-components/_button-logo.scss
@@ -1,7 +1,5 @@
-$button-logo-background-color: color(black) ;
+$button-logo-background-color: color(black);
 $button-logo-foreground-color: color(white);
-
-
 
 @mixin button-logo--base($background-color: color(black), $foreground-color: color(white)) {
   display: flex;
@@ -18,18 +16,21 @@ $button-logo-foreground-color: color(white);
   font-size: fontsize-rem(ms(4));
   font-family: font(surveyor);
   line-height: 1.2;
-  width: 6em;
+  width: 100%;
   height: 6em;
-  border-radius: 50%;
   position: relative;
   //transform:  rotate(-10deg); // @todo debug: rotation transforms break multiple text shadows on ios
   //transform: scale(0.7);
   //transform-origin: 0 0;
+  transition-property: border-radius, width;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
   @include breakpoint($bp-typography-narrow) {
     font-size: fontsize-rem(ms(5));
+    border-radius: 50%;
+    width: 6em;
   }
 }
-
 
 .button-logo {
   @include button-logo--base();
@@ -47,7 +48,6 @@ $button-logo-foreground-color: color(white);
 .button-logo--word {
   font-style: italic;
   font-weight: 800;
-  //text-shadow: 1px 1px 0 $foreground-color, 2px 2px 0 $foreground-color, 3px 3px 0 $foreground-color, 4px 4px 0 $foreground-color, 5px 5px 0 $foreground-color, 6px 6px 0 $foreground-color, 7px 7px 0 $foreground-color, 8px 8px 0 $foreground-color, 9px 9px 0 $foreground-color, 10px 10px 0 $foreground-color, 11px 11px 0 $foreground-color, 12px 12px 0 $foreground-color, 13px 13px 0 $foreground-color, 14px 14px 0 $foreground-color, 15px 15px 0 $foreground-color, 16px 16px 0 $foreground-color;
   text-shadow: long-shadow(
     $direction: 30deg,
     $length: 0.3em,
@@ -102,11 +102,6 @@ $button-logo-foreground-color: color(white);
     border-style: solid;
     border-color: rgba(color(white), 0.15);
     transform-origin: 50% 100%;
-    //@include breakpoint($bp-typography-narrow) {
-    //  $height: 7em;
-    //  height: $height;
-    //  top: -$height;
-    //}
   }
 }
 
