main navigation - wide

--- a/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,9 +1,9 @@
-<nav id="nav" class="nav">
-  <ul class="nav-list">
-    <li><a href="{{ url }}">Home (just make it look cool)</a></li>
-    <li><a href="{{ url }}">Portfolio (just portfolio items. be inventive)</a></li>
-    <li><a href="{{ url }}">Speaking (list of speaking gigs and talks)</a></li>
-    <li><a href="{{ url }}">Posts (change name. projects, articles, tutorials)</a></li>
-    <li><a href="{{ url }}">Contact (bio, photo)</a></li>
-  </ul>
+<nav id="nav-primary" class="nav nav-primary">
+  <input type="checkbox" id="nav-primary-trigger">
+  <div class="nav-primary--fan"><label for="nav-primary-trigger">Menu</label></div>
+  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Home</a></div>
+  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Portfolio</a></div>
+  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Speaking</a></div>
+  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Posts</a></div>
+  <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">About</a></div>
 </nav>
