--- a/src/patterns/02-organisms/00-global/00-header.mustache
+++ b/src/patterns/02-organisms/00-global/00-header.mustache
@@ -1,5 +1,5 @@
 <!-- Begin .header -->
-<header class="header cf" role="banner">
+<header class="site-header" role="banner">
 	{{> molecules-button-logo-name-title }}
   <a href="#nav" class="nav-toggle nav-toggle-menu icon-menu"><span class="is-vishidden">Menu</span></a>
 	{{> molecules-primary-nav }}
