start responsive menu ; add AdobeBlank for text replacement

--- a/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/src/patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,6 +1,6 @@
 <nav id="nav-primary" class="nav nav-primary">
   <input type="checkbox" id="nav-primary-trigger">
-  <div class="nav-primary--fan"><label for="nav-primary-trigger">Menu</label></div>
+  <div class="nav-primary--fan"><label for="nav-primary-trigger" class="nav-primary-trigger--label">Menu</label></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Home</a></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Portfolio</a></div>
   <div class="nav-primary--fan"><a href="{{ url }}" class="nav-item">Speaking</a></div>
