--- a/src/scss/00-config/02-variables/_typography.scss
+++ b/src/scss/00-config/02-variables/_typography.scss
@@ -8,7 +8,8 @@ $font-map: (
   surveyor: #{'Surveyor SSm A', 'Surveyor SSm B', serif},
   surveyor-fine: #{'"Surveyor Fine A", "Surveyor Fine B"', serif},
   //whitney: #{'Whitney SSm A', 'Whitney SSm B', sans-serif},
-  archer: #{'Archer SSm A', 'Archer SSm B', sans-serif}
+  archer: #{'Archer SSm A', 'Archer SSm B', sans-serif},
+  adobe-blank: #{'AdobeBlank', sans-serif}
 );
 
 //$font-body: font(surveyor);
